# fkie_environmental_measurements

./: README.md
fkie_measurement_msgs/: CMakeLists.txt  package.xml
fkie_measurement_msgs/msg/: Measurement.msg  MeasurementArray.msg  MeasurementEstimation.msg  MeasurementValue.msg
fkie_measurement_sensor_simulator/: CMakeLists.txt  package.xml
fkie_measurement_sensor_simulator/config/: sensor_simulator_config.yaml
fkie_measurement_sensor_simulator/include/fkie_measurement_sensor_simulator/: SensorServerDescription.hpp  SourceDescription.hpp  structs.hpp
fkie_measurement_sensor_simulator/launch/: sensor_simulator.launch  sensor_simulator.launch.xml
fkie_measurement_sensor_simulator/src/: SensorSimulator.cpp  SensorSimulator.h  SensorSimulatorNode.cpp
fkie_measurement_server/: CMakeLists.txt  package.xml  setup.cfg  setup.py
fkie_measurement_server/nodes/: simple_collector_node.py
fkie_measurement_server/src/fkie_measurement_server/: MeasurementPublisher.py  MeasurementServer.py
