<package format="3">
  <name>fkie_measurement_sensor_simulator</name>
  <version>0.0.0</version>
  <description>The fkie_measurement_sensor_simulator package</description>
  <author email="Lukas.Boes@fkie.fraunhofer.de">Lukas Boes</author>
  <maintainer email="Lukas.Boes@fkie.fraunhofer.de">Lukas Boes</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclc</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>fkie_measurement_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>rclc</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>