<package format="3">
  <name>fkie_measurement_server</name>
  <version>0.0.0</version>
  <description>The fkie_measurement_server package</description>
  <maintainer email="Lukas.Boes@fkie.fraunhofer.de">Lukas Boes</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>fkie_measurement_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
